classDiagram
    direction LR

    class Memory {
        +SIZE : int = 65536
        -data : byte[]
        +Memory()
        +read(address : int) byte
        +write(address : int, value : byte) void
        +clear() void
        +getSize() int
        -checkAddress(address : int) void
    }

    class RegisterFile {
        +NUM_REGISTERS : int = 16
        -registers : byte[]
        +RegisterFile()
        +get(index : int) byte
        +set(index : int, value : byte) void
        +reset() void
        +getCount() int
        -checkIndex(index : int) void
    }

    class ProgramCounter {
        +MAX_ADDRESS : int = 65535
        -value : int
        +ProgramCounter()
        +get() int
        +set(address : int) void
        +increment() void
        +reset() void
    }

    class CPU {
        -memory : Memory
        -registers : RegisterFile
        -pc : ProgramCounter
        -running : boolean
        +CPU()
        +getMemory() Memory
        +getRegisters() RegisterFile
        +getProgramCounter() ProgramCounter
        +isRunning() boolean
        +reset() void
        +run() void
        +step() boolean
        -fetch() byte
        -fetchAddress() int
        -fetchRegisterIndex() int
        -execute(opcode : byte) void
        -executeLoadConst() void
        -executeLoadMem() void
        -executeStoreMem() void
        -executeAdd() void
        -executeSub() void
        -executeMul() void
        -executeDiv() void
        -executeOr() void
        -executeAnd() void
        -executeXor() void
        -executeJump() void
        -executeBeq() void
        -executeBne() void
        -executeLoadIdx() void
        -executeStoreIdx() void
    }

    class ALU {
        +add(a : byte, b : byte)$ byte
        +subtract(a : byte, b : byte)$ byte
        +multiply(a : byte, b : byte)$ int
        +multiplyHigh(a : byte, b : byte)$ byte
        +multiplyLow(a : byte, b : byte)$ byte
        +divideQuotient(a : byte, b : byte)$ byte
        +divideRemainder(a : byte, b : byte)$ byte
        +or(a : byte, b : byte)$ byte
        +and(a : byte, b : byte)$ byte
        +xor(a : byte, b : byte)$ byte
    }

    class InstructionSet {
        +BREAK : byte = 0$
        +LOAD_CONST : byte = 1$
        +LOAD_MEM : byte = 2$
        +STORE_MEM : byte = 3$
        +ADD : byte = 4$
        +SUB : byte = 5$
        +MUL : byte = 6$
        +DIV : byte = 7$
        +OR : byte = 8$
        +AND : byte = 9$
        +XOR : byte = 10$
        +JUMP : byte = 11$
        +BEQ : byte = 12$
        +BNE : byte = 13$
        +LOAD_IDX : byte = 14$
        +STORE_IDX : byte = 15$
    }

    class Assembler {
        -memory : Memory
        -labelTable : Map~String,Integer~
        -writePointer : int
        +Assembler(memory : Memory)
        +assemble(source : String) void
        +getWritePointer() int
        +getLabelAddress(label : String) int
        -firstPass(lines : String[]) void
        -secondPass(lines : String[]) void
        -computeInstructionSize(line : String, lineNum : int) int
        -parseLine(line : String, lineNum : int) void
        -parseLoad(parts : String[], lineNum : int) void
        -parseStore(parts : String[], lineNum : int) void
        -parseAluTriple(opcode : byte, parts : String[]) void
        -parseMul(parts : String[]) void
        -parseDiv(parts : String[]) void
        -parseJump(parts : String[]) void
        -parseBranch(opcode : byte, parts : String[]) void
        -parseData(parts : String[]) void
        -parseString(line : String) void
        -parseRegister(token : String, lineNum : int) int
        -parseAddress(token : String, lineNum : int) int
        -resolveAddress(token : String) int
        -parseValue(token : String, lineNum : int) int
        -writeByte(value : byte) void
        -writeAddress(address : int) void
    }

    class AssemblerException {
        +AssemblerException(message : String)
        +AssemblerException(message : String, cause : Throwable)
    }

    CPU "1" *-- "1" Memory : contient
    CPU "1" *-- "1" RegisterFile : contient
    CPU "1" *-- "1" ProgramCounter : contient
    CPU ..> ALU : utilise
    CPU ..> InstructionSet : utilise
    Assembler "1" --> "1" Memory : écrit dans
    Assembler ..> InstructionSet : utilise
    Assembler ..> AssemblerException : lève
    AssemblerException --|> RuntimeException
